--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,12 @@
 {
     "compilerOptions": {
-        "target": "esnext",
-        "experimentalDecorators": true,
-        "module": "esnext",
-        "moduleResolution": "node",
+        "target": "es5",
+        "module": "commonjs",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
+        "moduleResolution": "node",
         "resolveJsonModule": true
     }
 }
