feat: 根据接口答案规则对平台选择进行序列化

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eventemitter3": "^4.0.7",
     "jquery": "^3.6.0",
     "tslib": "^2.4.0"
   },
