--- a/.prettierrc
+++ b/.prettierrc
@@ -8,6 +8,6 @@
     "endOfLine": "lf",
     "trailingComma": "es5",
     "bracketSpacing": true,
-    "parser": "babel",
+    "parser": "typescript",
     "jsxBracketSameLine": true
 }
