chore: 名字和仓库同步

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tampermonkey",
+  "name": "auto-answer-online-class",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
