--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "auto-answer-online-class",
-  "version": "1.0.0",
+  "version": "0.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/main.js",
   "scripts": {
     "start": "ts-node build/dev.ts",
     "build": "ts-node -P tsconfig.node.json webpack.config.ts "
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "eventemitter3": "^4.0.7",
     "jquery": "^3.6.0",
