--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,15 @@
     "trailingComma": "es5",
     "bracketSpacing": true,
     "parser": "typescript",
-    "jsxBracketSameLine": true
+    "jsxBracketSameLine": true,
+    "overrides": [
+        {
+            "files": [
+                "*.md"
+            ],
+            "options": {
+                "parser": "markdown"
+            }
+        }
+    ]
 }
