docs: 项目用途描述

--- a/.prettierrc
+++ b/.prettierrc
@@ -16,7 +16,8 @@
                 "*.md"
             ],
             "options": {
-                "parser": "markdown"
+                "parser": "markdown",
+                "tabWidth": 2
             }
         }
     ]
