--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-answer-online-class",
-  "version": "0.0.5",
+  "version": "0.0.8",
   "description": "",
   "main": "./dist/main.js",
   "scripts": {
@@ -18,11 +18,14 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/jquery": "^3.5.14",
+    "@types/node": "^18.7.18",
+    "clean-webpack-plugin": "^4.0.0",
     "rollup": "^2.73.0",
     "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "wrapper-webpack-plugin": "^2.2.2"
   }
 }
